front-end/src/styles.css
/**************
Table of Contents
1. Layout
2. Typography
3. Forms
4. Tables
5. Sidenav
6. Toolbar
7. Global
**************/

/**************
1. Layout
**************/

html, body, main {
  height: 100%;
}

html {
  box-sizing: border-box;
}

*, *:before, *:after {
  box-sizing: inherit;
}

body {
  background-color: var(--st-gray-10);
}

.hidden {
  display: none !important;
}

/**************
2. Typography
**************/

body {
  font-family: Roboto, "Helvetica Neue", sans-serif;
  margin: 0;
}

/**************
3. Forms
**************/

/* Angular Material Global Overwrites */

.mat-form-field {
  display: flex;
  width: 100%;
}

.mat-toolbar button:not(:last-child) {
  margin-right: 1em;
}

/* Global Styles */
.content {
  flex-grow: 1;
  max-width: 100%;
}

.content-container {
  display: flex;
  flex-flow: row nowrap;
  height: 100%;
}

.form-input {
  background: #FAFAFA;
  border: 1px solid #BEBEBE;
  box-sizing: border-box;
  border-radius: 3px;
  height: 3em;
  padding-top: .75em;
  padding-left: .5em;
}

.form-input-label {
  margin-bottom: .5em;
}

/**************
4. Tables
**************/

table {
  background-color: white;;
  width: 100%;
}

table tbody tr {
  cursor: pointer;
}

.history tbody tr {
  cursor: default;
}

/**************
5. Sidenav
**************/

.sidenav {
  max-width: 400px;
}

.sidenav-container {
  border: 1px solid var(--st-gray-20);
}

.sidenav-container input, .sidenav-container select, .sidenav-container textarea {
  min-width: 100% !important;
}

.sidenav-container label {
  color: var(--st-gray-60);
  display: inline-block;
  font-size: .75em;
  margin-bottom: .75em;
  margin-top: 3em;
}

.sidenav-content {
  padding-left: 1em;
  padding-right: 1em;
}

.sidenav-footer {
  border-bottom: 0 !important;
  margin-top: 3em;
  justify-content: flex-end !important;
}

.sidenav-footer button {
  margin-left: .5em;
}

.sidenav-header, .sidenav-footer {
  align-items: center;
  background-color: var(--st-gray-10);
  border-bottom: 1px solid var(--st-gray-20);
  display: flex;
  height: 2.75em;
  justify-content: space-between;
  padding: 0em 1em;
}

.sidenav-header button {
  font-size: 2em;
}

.sidenav-actions {
  display: flex;
  justify-content: space-between;
  margin-top: 1em;
}

/**************
5. Toolbar
**************/

.file-upload-input {
  display: none;
}

/*Make collection container inline with navbar content*/
.collection-container .mat-form-field-wrapper {
  line-height: 36px;
  padding-bottom: 0;
}

.page-toolbar {
  align-items: center;
  background-color: var(--st-gray-10);
  border-bottom: 1px solid var(--st-gray-20);
  box-shadow: 0px 1px 0px #E8ECF0;
  display: flex;
  height: 48px;
  justify-content: space-between;
  padding: 0 16px;
}

.page-toolbar-buttons button.icon {
  padding: 8px;
}

.page-toolbar-buttons button:not(:last-child) {
  margin-right: 24px;
}

.page-toolbar-buttons i {
  font-size: 16px;
  margin-right: 6px;
}

/**************
6. Toastr
**************/

#toast-container > .ngx-toastr {
  box-shadow: 3px 3px 9px rgba(0, 0, 0, 0.3);
  border-radius: 5px;
  background-image: none;
  font-family: 'Inter', sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: normal;
  letter-spacing: 0.04em;
  line-height: 16px;
  padding: 15px;
}

/**************
8. Global
**************/

button > i {
  font-size: 24px;
}

.error {
  color: var(--st-red);
}

.success {
  color: var(--st-green);
}

